	  the total number of lines by renumber()ing when necessary and
	  using the number of the last line of a filestruct.  Changes to
	  read_file(), move_to_filestruct(), copy_from_filestruct(),
	  do_justify(), get_totals() (renamed get_totsize()), and
	  do_cursorpos(). (DLR)
	- Change the NANO_WIDE #define to ENABLE_UTF8, as the latter is
	  clearer. (DLR)
- files.c:
  open_file()
	- Assert that filename isn't NULL, and don't do anything special
	  if it's blank, as the the former case shouldn't occur, and the
	  latter case is now handled elsewhere. (DLR)
- global.c:
  shortcut_init()
	- Simplify wording of nano_gotoline_msg. (Jordi and Ken Tyler)
- move.c:
  do_first_line(), do_last_line()
	- Simplify by only using edit_redraw(), and also make them call
	  check_statusblank(). (DLR)
  do_page_up(), do_page_down()
	- If there's less than a page of text onscreen, just call
	  do_(first|last)_line(). (DLR)
- nano.c:
  usage()
	- Properly mention the support for "[+LINE,COLUMN]" on the
	  command line when HAVE_GETOPT_LONG isn't defined. (DLR)
  do_verbatim_input()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  do_next_word()
	- Rework to be more like do_prev_word(), to avoid a potential
	  problem if we start at the end of a line. (DLR)
  do_output()
	- When adding a character, just add its length in bytes to
	  current_x instead of calling do_right(), and set placewewant
	  afterward. (DLR)
  do_alt_speller()
	- If we can't invoke the spell checker, use sprintf() instead of
	  snprintf() to write the error string we return, as the one
	  formatted value is a simple string, and so altspell_error will
	  always be long enough to hold it.  Also remove unnecessary
	  initialization of altspell_error, refactor so that msglen is
	  no longer needed, and make the error message more similar to
	  what the internal spell checker returns under the same
	  circumstances. (DLR)
  do_spell()